<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/alimentacao"
    android:background="@color/gray_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="25dp"
        android:layout_margin="17dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Defina sua alimentação"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColorHint="@color/blue_primary" />

        <TextView
            android:id="@+id/nome_destino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/destino"
            android:textColorHint="@color/blue_primary" />

        <EditText
            android:id="@+id/custo_medio_alimentacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Custo médio por refeição"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/qtd_refeicoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Quantidade de refeições por dia"
            android:inputType="number" />

        <TextView
            android:id="@+id/total_alimentacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_parcial"
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_margin="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calcular_alimentacao"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:backgroundTint="@color/green_primary"
                android:layout_marginEnd="15dp"/>

            <Button
                android:id="@+id/btn_alimentacao_avancar"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/avancar"
                android:backgroundTint="@color/green_secondary"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>