<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TransporteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:id="@+id/nome_destino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Transporte - "
            android:textColorHint="@color/blue_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/qtd_pessoas_transporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Para x pessoas"
            android:textColorHint="@color/blue_primary" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transporte_prompt" />

                <Spinner
                    android:id="@+id/transporte_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_carro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:visibility="visible"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="17dp"
                android:background="@color/white">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Viagem de automóvel:"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColorHint="@color/blue_primary" />

            <CheckBox
                android:id="@+id/checkBox_aluguel_carro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carro Alugado"
                android:checked="false"/>

            <LinearLayout
                android:id="@+id/layout_aluguel_carro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/carro"
                    app:tint="@color/green_secondary" />

                <EditText
                    android:id="@+id/valor_aluguel_carro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Valor aluguel"
                    android:inputType="numberDecimal" />

            </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@drawable/viagem_de_carro"
                    app:tint="@color/green_secondary"
                    android:layout_marginEnd="4dp"/>

                <EditText
                    android:id="@+id/km_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Quantos Km"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@drawable/gota_do_medidor"
                    app:tint="@color/green_secondary"
                    android:layout_marginEnd="4dp"/>

                <EditText
                    android:id="@+id/km_litro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Km por litro"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@drawable/bomba_de_gas"
                    app:tint="@color/green_secondary"
                    android:layout_marginEnd="4dp"/>

                <EditText
                    android:id="@+id/custo_litro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Custo por litro"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@drawable/carros"
                    app:tint="@color/green_secondary"
                    android:layout_marginEnd="4dp"/>

                <EditText
                    android:id="@+id/total_veiculos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Total de veiculos"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/total_carro_transporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_parcial"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_margin="10dp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_aviao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:visibility="gone"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="17dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="Organize sua viagem"
                    android:textColorHint="@color/blue_primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nomeino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/destino"
                    android:textColorHint="@color/blue_primary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/aviao"
                        app:tint="@color/green_secondary" />

                    <EditText
                        android:id="@+id/valor_passagem_avisao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Valor passagem unitária"
                        android:inputType="numberDecimal" />

                </LinearLayout>


                <TextView
                    android:id="@+id/total_aviao_transporte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_parcial"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_margin="16dp" />

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/btn_transporte_adicionar"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/adicionar"
                android:backgroundTint="@color/green_primary"
                android:layout_marginEnd="15dp"/>

            <Button
                android:id="@+id/btn_transporte_avancar"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/avancar"
                android:backgroundTint="@color/green_secondary"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>